<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_edituser"
            android:icon="@drawable/ic_edit_user_black"
            android:title="@string/edituser_menu" />

        <item
            android:id="@+id/nav_placelist"
            android:icon="@drawable/ic_arc_de_triomphe"
            android:title="@string/placeList_menu"/>

        <item
            android:id="@+id/nav_userlist"
            android:icon="@drawable/ic_baseline_contacts_24"
            android:title="@string/userlist_menu" />

        <item
            android:id="@+id/nav_user_custom_lists"
            android:title="@string/usercustomlists_menu"
            android:icon="@drawable/ic_list_icon_33"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_menu" />

    </group>

</menu>