<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.example.tourapp.viewModel.UserListViewModel" />

        <variable
            name="position"
            type="int" />
    </data>
    <LinearLayout
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_10">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_20">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_name"
            android:paddingRight="@dimen/margin_15"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_20">


        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_email"
            android:paddingRight="@dimen/margin_15"/>

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_20">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_data_type"
            android:paddingRight="@dimen/margin_15"/>

        <TextView
            android:id="@+id/tv_user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </TableRow>

</TableLayout>
    </LinearLayout>
</layout>